--- a/euipment.html
+++ b/euipment.html
@@ -18,5 +18,36 @@
             </div>
             <!--better buttons? how do we do it?-->
         </header>
+        <div id="equipment">
+            <h2 class="home-title">Equipment</h2>
+            <div id="equipment-container">
+                <img src="https://i.imgur.com/wtthwcz.jpeg" class="equipment-image" alt="DnD Rulebook">
+                <img src="https://i.imgur.com/4zxnnK3.png" class="equipment-image" alt="Adventure">
+                <p class="equipment-text">The rulebook, now known as the Player Guide can be used in concert with the Dungeon
+                    Master's Guide, and Monster Manual to help the Dungeon Master guide the game and the
+                    players understand the rules.
+                </p>
+                <p class="equipment-text">Adventures can be purchased, taken from generous creators on
+                    countless websites, or even created by the Dungeon Master themself. Either way these are
+                    the worlds that the players play in and the general plot that they follow.
+                </p>
+
+                <img src="https://i.imgur.com/tgwgGeC.jpeg" class="equipment-image" alt="Pencil and Paper">
+                <img src="https://i.imgur.com/Qrjms.jpeg" class="equipment-image" alt="Imagination">
+                <p class="equipment-text">To play the game you need a Character Sheet with special locations
+                    to put in your character's stats. This represents how skilled a character is and change as
+                    they learn and grow. You may also want to take notes.
+                </p>
+                <p class="equipment-text">Imagination is key. While this game can be played with large
+                    grid-based maps and detailed miniatures, the entirety of the game takes place in the
+                    collective imaginations of the Dungeon Master and Player Characters.
+                </p>
+                <img src="https://i.imgur.com/yLVXIGR.jpeg" class="equipment-image" alt="Roleplaying Dice">
+                <p class="equipment-text">These special dice determine everything in the game and include the 
+                    common six-sided die, down to a four-sided pyramidal die and up to a twenty-sided die. These 
+                    are key to the gameplay itself.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
