--- a/players.html
+++ b/players.html
@@ -18,6 +18,30 @@
             </div>
             <!--better buttons? how do we do it?-->
         </header>
-    
+        <div id="players">
+            <h2 class="home-title">Players</h2>
+            <!--this has to be a different format to the other two to show lessons learned-->
+            <div id="player-pc">
+                <h3>The Player Character</h3>
+                <p>Most players take on the role of Player Character. They choose the actions of one character 
+                    within this world and. through the use of roleplaying dice, determine how successful each action is. 
+                    They interact with one another as well as the Dungeon Master to move the story forward and carry out 
+                    whatever quests they have set upon.</p>
+            </div>
+            <div id="player-dm">
+                <h3>The Dungeon Master</h3>
+                <p>The Dungeon Master, or DM, is responsible for controlling the entire world and every other character
+                    in it. They do this by utilizing the Rulebook as well as having an intimate knowledge of the 
+                    adventure th Player Characters are embarking in. A great deal of quick thinking and a rigid
+                    application of the rules are required by DM's in order to run the game successfully.</p>
+            </div>
+            <div id="player-wt">
+                <h3>Working Together</h3>
+                <p>The Player Characters work in concert with one another to accomplish a common goal. That much
+                    is obvious. What might not be as obvious, however, is that they also work together with the DM.
+                    Nobody is working against anyone else. The DM doesn't win if the Players lose. Everybody wins
+                    when everyone else is having a good time. That's what makes this game truly magical.</p>
+            </div>
+        </div>
     </body>
 </html>
