--- a/euipment.html
+++ b/euipment.html
@@ -49,5 +49,9 @@
                 </p>
             </div>
         </div>
+        <footer>
+            <p>Copyright Wizards of the Coast</p>
+            <p>Walker Emke 2024</p>
+        </footer>
     </body>
 </html>
