--- a/players.html
+++ b/players.html
@@ -43,5 +43,9 @@
                     when everyone else is having a good time. That's what makes this game truly magical.</p>
             </div>
         </div>
+        <footer>
+            <p>Copyright Wizards of the Coast</p>
+            <p>Walker Emke 2024</p>
+        </footer>
     </body>
 </html>
