--- a/home.html
+++ b/home.html
@@ -49,5 +49,9 @@
         in time should search for ways to make this work with seperate divs but making accidental learnings ver2-->
         <!--This will be important if we use one long page.-->
         <!--Current plan is three seperate pages-->
+        <footer>
+            <p>Copyright Wizards of the Coast</p>
+            <p>Walker Emke 2024</p>
+        </footer>
     </body>
 </html>    
