--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="How to, Dungeons and Dragons, DnD">
-        <link rel="stylesheet" href="stylenew.css">
+        <link rel="stylesheet" href=".devcontainer/build-assets/stylenew.css">
         <title>How to DnD</title>
     </head>
     <body>
@@ -12,7 +12,7 @@
                 <img src="https://cdn.worldvectorlogo.com/logos/dungeons-and-dragons-pb.svg" id="tl2" alt="Dungeons and Dragons">
             </div>
             <div id="pagenav">
-                <a href="home.html" class="button">Home</a>
+                <a href="index.html" class="button">Home</a>
                 <a href="equipment.html" class="button">Equipment</a>
                 <a href="players.html" class="button">Players</a>
             </div>
