--- a/equipment.html
+++ b/equipment.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="How to, Dungeons and Dragons, DnD">
-        <link rel="stylesheet" href="stylenew.css">
+        <link rel="stylesheet" href=".devcontainer/build-assets/stylenew.css">
         <title>How to DnD</title>
     </head>
     <body>
