--- a/equipment.html
+++ b/equipment.html
@@ -12,9 +12,9 @@
                 <img src="https://cdn.worldvectorlogo.com/logos/dungeons-and-dragons-pb.svg" id="tl2" alt="Dungeons and Dragons">
             </div>
             <div id="pagenav">
-                <a href="#home" class="button">Home</a>
-                <a href="#equipment" class="button">Equipment</a>
-                <a href="#players" class="button">Players</a>
+                <a href="index.html" class="button">Home</a>
+                <a href="equipment.html" class="button">Equipment</a>
+                <a href="players.html" class="button">Players</a>
             </div>
             <!--better buttons? how do we do it?-->
         </header>
